--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,31 +9,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hello World | Starter</title>
 
-    <!-- Google Font: Source Sans Pro -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
-    />
+    <link rel="stylesheet" />
     <!-- Font Awesome Icons -->
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/plugins/fontawesome-free/css/all.min.css"
     />
-    <!-- Theme style -->
   </head>
-  <body class="hold-transition sidebar-mini">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
-    <!-- ./wrapper -->
-
-    <!-- REQUIRED SCRIPTS -->
-
-    <!-- jQuery -->
-    <script src="%PUBLIC_URL%/assets/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="%PUBLIC_URL%/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="%PUBLIC_URL%/assets/dist/js/adminlte.min.js"></script>
   </body>
 </html>
