--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,10 +15,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/plugins/fontawesome-free/css/all.min.css"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
   </head>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
